Team view updates

--- a/natrank-frontend/app.less
+++ b/natrank-frontend/app.less
@@ -69,6 +69,14 @@
   width: 18px;
 }
 
+.positive {
+  color: @color-up;
+}
+
+.negative {
+  color: @color-down;
+}
+
 /* Personal preference for BS modal.  The LESS below makes the backdrop white and
    causes the modal to fade in rather than slide in. */
 //@modal-backdrop-bg: white;
