--- a/natrank-frontend/directive/ranking/ranking.less
+++ b/natrank-frontend/directive/ranking/ranking.less
@@ -28,7 +28,7 @@
 
   > tbody {
     > .highlight {
-      background-color: lighten(@color-new, 30%);
+      background-color: lighten(#FFFF00, 40%);
     }
 
     .rank {
@@ -97,14 +97,6 @@
     .full {
       vertical-align: middle;
       font-size: 13px;
-    }
-
-    .positive {
-      color: @color-up;
-    }
-
-    .negative {
-      color: @color-down;
     }
   }
 
