--- a/natrank-frontend/directive/resultList/resultList.less
+++ b/natrank-frontend/directive/resultList/resultList.less
@@ -13,6 +13,7 @@
       .container;
       padding: 7px 12px 7px 10px;
       border-left: 3px solid #FFFFFF;
+      width: 100% !important;
 
       .name {
         vertical-align: middle;
