--- a/natrank-frontend/partial/team/team.less
+++ b/natrank-frontend/partial/team/team.less
@@ -1,30 +1,11 @@
 #team-container {
   .make-md-column(12);
+  .container;
 
   > #header {
-    .text-left;
-
-    > .rank-and-rating {
-      background-color: @color-new;
-      color: #FFFFFF;
-      vertical-align: middle;
-      padding: 3px 4px;
-      border-radius: 4px;
-      margin-right: 3px;
-      display: inline-table;
-
-      > div {
-        .text-center;
-        font-weight: bold;
-        display: table-row;
-      }
-
-      > .rating {
-        font-size: 10px;
-        font-weight: normal;
-        padding: 3px 10px;
-      }
-    }
+    .text-center;
+    margin-bottom: 19px;
+    font-weight: bold;
 
     > .flag {
       width: 80px;
@@ -37,13 +18,88 @@
 
   }
 
-  > #stats {
-    .table;
-    .table-bordered;
-    width: 300px;
+  .row {
+    margin-bottom: 1%;
+  }
 
-    .header {
-      font-weight: bold;
+  section {
+    border: 1px solid @gray-lighter;
+    border-radius: 4px;
+    padding-bottom: 7px;
+    box-sizing: border-box;
+
+    > h3 {
+      .text-center;
+      margin-top: 10px;
+    }
+  }
+
+  section#ranking {
+    .make-md-column(6);
+    margin-right: 1%;
+    width: 49.5% !important;
+
+    > #not-ranked-msg {
+      .text-center;
+      font-size: 13px;
+      color: @gray-light;
+    }
+  }
+
+  section#statistics {
+    .make-md-column(6);
+    width: 49.5% !important;
+
+    #outcomes {
+      #wins {
+        color: @color-up;
+      }
+
+      #losses {
+        color: @color-down;
+      }
+
+      .num {
+        font-weight: bold;
+      }
+    }
+
+    #goals {
+      span {
+        font-weight: bold;
+      }
+
+      #for {
+        color: @color-up;
+      }
+
+      #against {
+        color: @color-down;
+      }
+    }
+  }
+
+  section#ranking-history {
+    .make-md-column(12);
+
+    > h4 {
+      .text-center;
+    }
+  }
+
+  section#notable-matches {
+    .make-md-column(12);
+
+    > h4 {
+      .text-center;
+    }
+  }
+
+  section#results {
+    .make-md-column(12);
+
+    > h3 {
+      margin-bottom: 0;
     }
   }
 }
