Added generation, retrieving and displaying of team's notable matches. Added two notable match types (biggest win, biggest defeat).

--- a/natrank-frontend/app.less
+++ b/natrank-frontend/app.less
@@ -25,6 +25,7 @@
 @import "partial/team/team.less";
 @import "directive/resultList/resultList.less";
 @import "directive/ranking/ranking.less";
+@import "directive/result/result.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
