Added rating history chart to team view

--- a/natrank-frontend/partial/team/team.html
+++ b/natrank-frontend/partial/team/team.html
@@ -55,9 +55,9 @@
     </section>
   </div>
   <div class="row" data-ng-show="ranking">
-    <section id="ranking-history">
-      <h4>Ranking history</h4>
-      <div></div>
+    <section id="rating-history">
+      <h4>Rating history</h4>
+      <div data-highchart="" id="chart" data-config="ratingHistoryChartConfig"></div>
     </section>
   </div>
   <div class="row">
