--- a/natrank-frontend/partial/rankings/rankings.html
+++ b/natrank-frontend/partial/rankings/rankings.html
@@ -23,5 +23,5 @@
     <input id="year" type="number" min="1872" max="2014" data-ng-model="year"
            data-ng-model-options="{debounce: 500}"/>
   </div>
-  <div data-ranking=""></div>
+  <div data-ranking="" class="animated-container" data-ng-hide="loadingRanking"></div>
 </div>
