--- a/natrank-frontend/partial/landing/landing.html
+++ b/natrank-frontend/partial/landing/landing.html
@@ -21,7 +21,7 @@
   </p>
   <p>
     <h2>For programmers</h2>
-    The underlying web application is completely free and is licensed under
+    This web application is completely free and is licensed under
     <a href="http://www.gnu.org/copyleft/gpl.html">The GNU General Public License</a>.
     The source code is hosted in our <a href="https://github.com/fauu/natrank">github repository</a>.
   </p>
