--- a/natrank-frontend/app.less
+++ b/natrank-frontend/app.less
@@ -8,6 +8,7 @@
 @color-new: #F0AD4E;
 
 /* Component LESS */
+@import "partial/header/header.less";
 @import "partial/landing/landing.less";
 @import "partial/results/results.less";
 @import "partial/rankings/rankings.less";
@@ -22,25 +23,6 @@
 
 body {
   margin-bottom: 30px;
-}
-
-#top-bar {
-  .navbar;
-  .navbar-default;
-  .navbar-static-top;
-
-  header {
-    .navbar-header;
-
-    > .navbar-brand {
-      font-weight: bold;
-
-      sup {
-        font-size: 11px;
-        font-weight: normal;
-      }
-    }
-  }
 }
 
 #main-container {
