Minor config-related adjustments

--- a/natrank-frontend/partial/results/results.less
+++ b/natrank-frontend/partial/results/results.less
@@ -13,6 +13,10 @@
   > #results-year-filter {
     margin-bottom: 18px;
 
+    label {
+      margin-right: 3px;
+    }
+
     > #year {
       width: 60px;
       .text-right;
