--- a/frontend-v2/resources/styles/main.scss
+++ b/frontend-v2/resources/styles/main.scss
@@ -2,47 +2,69 @@
 @import '_fonts.scss';
 @import 'bourbon/bourbon';
 
-body {
-  font-family: 'Roboto';
-}
-
 $primary: rgb(25, 85, 135);
 $background: rgb(250, 250, 250);
+$text: rgb(60, 60, 60);
+$top-bar-height: 45px;
 
 @mixin text-shadow {
-  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.1);
 }
 
-nav#top-bar {
-  height: 60px;
-  background: $primary;
+@mixin font-regular {
+  font-weight: 400;
+}
+@mixin font-medium {
+  font-weight: 500;
+}
+@mixin font-bold {
+  font-weight: 700;
+}
+
+body {
+  font-family: 'Roboto';
+  background: $background;
+  color: $text;
+}
+
+.top-bar {
+  height: $top-bar-height;
+  background: linear-gradient(240deg, $primary 0%, lighten($primary, 30%) 70%, lighten($primary, 40%) 100%);
   color: $background;
   top: 0;
   display: flex;
   align-items: center;
-  padding: 0 20px;
-  border-bottom: 2px solid shade($primary, 20%);
+  padding: 0 25px;
+}
 
-  .logo {
-    @include text-shadow;
-    font-weight: bold;
-    font-size: 200%;
-    margin-right: 40px;
-  }
+.site-logo {
+  @include text-shadow;
+  font-weight: bold;
+  font-size: 170%;
+  margin-right: 25px;
+  user-select: none;
+  cursor: default;
+}
 
-  a {
-    @include text-shadow;
+.main-navigation {
+  height: 100%;
+
+  &__link {
+    @include font-medium;
     color: $background;
     text-decoration: none;
-    height: 100%;
     text-align: center;
-    line-height: 60px;
+    display: inline-block;
+    line-height: $top-bar-height;
     padding: 0 18px;
 
-    &:hover {
+    &--active {
       background-color: $background;
-      color: $primary;
-      text-shadow: none;
+      color: $text;
+    }
+
+    &:hover:not(&--active) {
+      background: rgba(255, 255, 255, 0.3);
     }
   }
 
@@ -51,6 +73,6 @@ nav#top-bar {
   }
 }
 
-#page {
-  padding: 20px 20px;
+.page {
+  padding: 20px 25px;
 }
