--- a/frontend-v2/resources/styles/_ranking.scss
+++ b/frontend-v2/resources/styles/_ranking.scss
@@ -11,6 +11,7 @@ $border-color: tint($text-color, 75%);
   width: 700px;
   margin: 0 auto;
   border-collapse: collapse;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
 }
 
 .ranking-header {
@@ -21,12 +22,13 @@ $border-color: tint($text-color, 75%);
 
   &__cell {
     padding: 6px 5px;
+    width: 35px;
     text-align: center;
     border-bottom: 1px solid lighten($primary-color, 15%);
     border-top: 1px solid lighten($primary-color, 15%);
 
     &--rank {
-      text-align: right;
+      padding-left: 10px !important;
       width: 35px;
     }
     &--rank-one-year-change {
@@ -37,6 +39,8 @@ $border-color: tint($text-color, 75%);
     }
     &--rating {
       border-right: 1px solid lighten($primary-color, 15%);
+      padding: 0 10px !important;
+      text-align: center;
     }
     &--total {
       @include header-sub-border;
@@ -60,9 +64,11 @@ $border-color: tint($text-color, 75%);
     text-align: center;
 
     &--rank {
-      @include font-bold;
       font-size: 115%;
       text-align: right;
+    }
+    &--rank-one-year-change {
+      padding-right: 8px;
     }
     &--team-flag {
       padding: 0;
@@ -73,7 +79,7 @@ $border-color: tint($text-color, 75%);
       font-size: 130%;
     }
     &--rating {
-      @include font-bold;
+      @include font-medium;
       font-size: 130%;
       border-right: 1px solid $border-color;
     }
@@ -111,6 +117,7 @@ $border-color: tint($text-color, 75%);
 
 .new-ranking-entry-indicator {
   @include font-bold;
+  font-size: 90%;
   text-transform: uppercase;
   color: $bg-color;
   background: rgb(255, 160, 25);
