Implement ranking date picker and fetching of 'non-latest' rankings

--- a/frontend-v2/resources/styles/_mixins.scss
+++ b/frontend-v2/resources/styles/_mixins.scss
@@ -11,3 +11,9 @@
 @mixin font-bold {
   font-weight: 900;
 }
+
+@mixin icon($icon) {
+    @include fa-icon;
+    @extend .fa;
+    @extend .fa-#{$icon}:before;
+}
