--- a/frontend-v2/resources/styles/main.scss
+++ b/frontend-v2/resources/styles/main.scss
@@ -1,9 +1,11 @@
 @import '~normalize-scss/sass/normalize/import-now';
 @import 'bourbon/bourbon';
-@import '_fonts.scss';
-@import '_colors.scss';
-@import '_mixins.scss';
-@import '_ranking.scss';
+@import 'font-awesome/font-awesome';
+@import 'fonts';
+@import 'colors';
+@import 'mixins';
+@import 'spinner';
+@import 'ranking';
 
 $top-bar-height: 45px;
 
@@ -13,13 +15,16 @@ body {
   color: $text-color;
 }
 
+::selection {
+  background: lighten($primary-color, 50%);
+}
+
 a {
   text-decoration: none;
   color: lighten($primary-color, 22.5%);
 
   transition-duration: 0.2s;
   transition-property: 'background-color, color';
-
 
   &:hover {
     color: lighten($primary-color, 50%);
@@ -93,6 +98,8 @@ h2 {
 
 .page {
   padding: 20px 25px;
+  display: flex;
+  justify-content: center;
 }
 
 .footer {
