--- a/frontend-v2/resources/styles/_ranking.scss
+++ b/frontend-v2/resources/styles/_ranking.scss
@@ -89,10 +89,26 @@ $border-color: tint($text-color, 75%);
 }
 
 .ranking {
-  width: 700px;
+  width: 400px;
   margin: 0 auto;
   border-collapse: collapse;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
+
+  &--full {
+    width: 700px;
+
+    .ranking-header {
+      &__cell--rating {
+        border-right: 1px solid lighten($primary-color, 15%);
+      }
+    }
+
+    .ranking-row {
+      &__cell--rating {
+        border-right: 1px solid lighten($text-color, 50%);
+      }
+    }
+  }
 }
 
 .ranking-header {
@@ -119,7 +135,6 @@ $border-color: tint($text-color, 75%);
       text-align: left;
     }
     &--rating {
-      border-right: 1px solid lighten($primary-color, 15%);
       padding: 0 10px !important;
       text-align: center;
     }
@@ -162,7 +177,6 @@ $border-color: tint($text-color, 75%);
     &--rating {
       @include font-medium;
       font-size: 130%;
-      border-right: 1px solid $border-color;
     }
     &--total {
       @include cell-sub-border;
