Add proper handling of incorrect dates in ranking page url; add +/- controls to ranking date picker; improve ranking date picker's visuals

--- a/frontend-v2/resources/styles/_mixins.scss
+++ b/frontend-v2/resources/styles/_mixins.scss
@@ -2,6 +2,10 @@
   text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.1);
 }
 
+@mixin rounded-border {
+  border-radius: 5px;
+}
+
 @mixin font-regular {
   font-weight: 400;
 }
