--- a/frontend-v2/resources/styles/_ranking-datepicker.scss
+++ b/frontend-v2/resources/styles/_ranking-datepicker.scss
@@ -3,7 +3,7 @@
 @mixin datepicker-input {
   @include font-medium;
   font-family: 'Lato';
-  background: transparent;
+  background: lighten($bg-color, 10%);
   border: 1px solid lighten($text-color, 60%);
   color: $text-color;
   height: 40px;
