--- a/frontend-v2/resources/styles/main.scss
+++ b/frontend-v2/resources/styles/main.scss
@@ -6,6 +6,7 @@
 @import 'mixins';
 @import 'spinner';
 @import 'ranking';
+@import 'results';
 
 $top-bar-height: 45px;
 
@@ -13,6 +14,32 @@ body {
   font-family: 'Lato';
   background: $bg-color;
   color: $text-color;
+}
+
+.fade-enter {
+  opacity: 0.01;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.fade-leave {
+  opacity: 1;
+}
+
+.fade-leave.fade-leave-active {
+  opacity: 0.01;
+  transition: opacity 500ms ease-in;
+}
+.fade-appear {
+  opacity: 0.01;
+}
+
+.fade-appear.fade-appear-active {
+  opacity: 1;
+  transition: opacity .5s ease-in;
 }
 
 ::selection {
@@ -99,11 +126,14 @@ h2 {
 .page {
   padding: 20px 25px;
   display: flex;
-  justify-content: center;
-}
 
-.footer {
-
+  &--not-found {
+    @include font-medium;
+    padding-top: 300px;
+    justify-content: center;
+    font-size: 999%;
+    color: lighten($text-color, 60%);
+  }
 }
 
 .flag {
