--- a/frontend-v2/resources/styles/_mixins.scss
+++ b/frontend-v2/resources/styles/_mixins.scss
@@ -2,6 +2,10 @@
   text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.1);
 }
 
+@mixin panel-shadow {
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
+}
+
 @mixin rounded-border {
   border-radius: 5px;
 }
