--- a/frontend-v2/resources/styles/_results.scss
+++ b/frontend-v2/resources/styles/_results.scss
@@ -1,5 +1,14 @@
-
 .page--results {
   display: flex;
   justify-content: center;
+
+  margin: 0 auto;
+  width: 600px;
+  flex-direction: column;
+}
+
+.result {
+  @include panel-shadow;
+  margin: 10px 0;
+  padding: 8px;
 }
